# imago

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEPENDENCIES.md  LICENSE.GPL  imago-version.cmake
applications/imago_console/: CMakeLists.txt
applications/imago_console/src/: learning_context.h  machine_learning.cpp  machine_learning.h  main.cpp  recognition_helpers.cpp  recognition_helpers.h  similarity_tools.cpp  similarity_tools.h
applications/imago_gui/: CMakeLists.txt  build.xml
applications/imago_gui/src/com/ggasoftware/: Ego.java  EgoForm.java  EgoFrame.java  FormBuilder.java  ImagePanel.java  MenuBuilder.java  MessageBox.java  MoleculePanel.java  MoleculeSelection.java  OpenSketcherDialog.java  Utils.java  WaitingPanel.java
applications/imago_gui/src/com/ggasoftware/DocumentHandling/: Document.java  DocumentPanel.java  ImageDocument.java  PdfDocument.java  TiffDocument.java
bindings/c/: CMakeLists.txt
bindings/c/src/: imago_c.cpp  imago_c.h  imago_version.h.in  recognition_context.cpp  recognition_context.h  session_manager.cpp  session_manager.h
bindings/c/test/: imago_c_test.c  indigo_compare_molecules.c
bindings/java/: build.xml
bindings/java/src/com/ggasoftware/imago/: Imago.java  ImagoException.java  ImagoLib.java
cmake/: Boost.cmake  BuildOptions.cmake  BuildOptionsLinux.cmake  BuildOptionsMac.cmake  BuildOptionsWin.cmake  GetSystemVersion.cmake  Indigo.cmake  OpenCV.cmake
examples/: 0000041_rnd.mol  0000191_rnd.mol  0000230_rnd.mol  0000415_rnd.mol  0000603_rnd.mol  0000931_rnd.mol  0001018_rnd.mol  0001608_rnd.mol  0002057_rnd.mol  0002708_rnd.mol
imago/: CMakeLists.txt
imago/src/: algebra.cpp  algebra.h  approximator.cpp  approximator.h  basic_2d_storage.h  character_recognizer.cpp  character_recognizer.h  chemical_structure_recognizer.cpp  chemical_structure_recognizer.h  chemical_validity.cpp  chemical_validity.h  comdef.h  complex_contour.cpp  complex_contour.h  complex_number.cpp  complex_number.h  dirent.h  double_bond_maker.cpp  double_bond_maker.h  exception.h  failsafe_png.cpp  failsafe_png.h  file_helpers.cpp  file_helpers.h  filters_list.cpp  filters_list.h  font.inc  fonts_list.cpp  fonts_list.h  graph_extractor.cpp  graph_extractor.h  graphics_detector.cpp  graphics_detector.h  image.cpp  image.h  image_draw_utils.cpp  image_draw_utils.h  image_utils.cpp  image_utils.h  label_combiner.cpp  (+70 more)
tools/compare-versions/: run.py  template.html
tools/compare-versions/html/: jquery-ui.custom.min.js  style.css
tools/compare-versions/html/redmond/: jquery-ui-1.8.24.custom.css
tools/compare-versions/images/: readme.txt
tools/compare-versions/indigo/: readme.txt
tools/compare-versions/versions/: readme.txt
